tests/ui/missing/missing-macro-use.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/missing-macro-use.rs:6:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^ not found in this scope
   |
help: consider importing this macro
   |
LL + use two_macros::macro_two;
   |

error: aborting due to 1 previous error

